--- a/data/projects.json
+++ b/data/projects.json
@@ -1,9 +1,11 @@
 {
-  "random-thingz": {
-    "state": "beta",
-    "type": "curseforge",
-    "curseforge": {
-      "id": 417132
+  "advanced_debug": {
+    "name": "Advanced Debug",
+    "links": {
+      "curseforge": "https://curseforge.com/minecraft/mc-mods/advanced-debug",
+      "modrinth": "https://modrinth.com/mod/advanced-debug",
+      "github": "https://github.com/Ultreon/advanced-debug",
+      "issue_tracker": "https://github.com/Ultreon/advanced-debug/issues"
     }
   }
 }
